# Trilha-Sonora

./: README.md
backend/: main.py  mocked.json  pyproject.toml
backend/leitura/: pdf_processor.py
backend/utils/: ambiente.py  sentimental_analysis.py
