[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trilha-sonora-backend"
version = "0.1.0"
description = "Backend para detecção de ambiente em textos usando DeepSeek SLM"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Seu Nome", email = "seu.email@exemplo.com" },
]
keywords = ["nlp", "deepseek", "ambiente", "classificacao", "slm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "requests>=2.31.0",
    "transformers>=4.36.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "tokenizers>=0.15.0",
    "sentencepiece>=0.1.99",
    "protobuf>=4.21.1",
    "scipy>=1.11.0",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/seu-usuario/trilha-sonora"
Documentation = "https://github.com/seu-usuario/trilha-sonora#readme"
Repository = "https://github.com/seu-usuario/trilha-sonora.git"
Issues = "https://github.com/seu-usuario/trilha-sonora/issues"

[project.scripts]
detectar-ambiente = "backend.utils.ambiente:main"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
